# Spidercrawl

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  MONETIZATION_PLAN.md  PROJECT_CAPABILITIES.md  README.md  ROADMAP.md  SCENARIO_INTELLIGENCE.md  USE_EXAMPLE.md  docker-compose.yml  eslint.config.mjs  implementation_plan.md  package-lock.json  package.json  railway.toml  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api-base.ts  api.ts  dashboard-ask.ts  entities.tsx  job-rerun.ts  main.tsx  styles.css  utils.ts
db/: schema.sql
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: reference.md
docs/guide/: LAUNCH_GUIDE.md  configuration.md  deployment-hosted.md  getting-started.md
landing/: index.html
sdk/python/: pyproject.toml
sdk/python/spidercrawl/: __init__.py  client.py  langchain.py  llama_index.py
sdk/typescript/: package.json
src/: index.ts
src/ai/: entity-resolver.ts  (+4 more)
tests/: api-serialize.test.ts  dashboard-api-base.test.ts  dashboard-ask.test.ts  env-utils.test.ts  graph-export.test.ts  hybrid-search.test.ts  job-rerun.test.ts  jsonl.test.ts  markdown-engine.test.ts  new-crawl-page.test.ts  search.test.ts  sse-replay.test.ts  table-extractor.test.ts  url-utils.test.ts  webhooks.test.ts
workers/: Dockerfile  requirements.txt  scraper_worker.py
(+57 files in other folders)
